# mobilefacenet_ncnn

./: CMakeLists.txt  README.md  dataset.txt  main.cpp  mobilefacenet.cpp  mobilefacenet.h  pairs_path.txt  pairs_path_1.txt
models/: MobileFacenet.param  mobilefacenet-int8.param  mobilefacenet.param
